# homology-explorer

./: .gitignore  .pre-commit-config.yaml  Caddyfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
app/: docker-compose.yml
app/api/: Dockerfile  pyproject.toml
app/api/app/: crud.py  database.py  schemas.py
app/data/: Dockerfile
app/nginx/: Dockerfile  default.conf  nginx.conf
app/ui/: Dockerfile  package.json  pnpm-lock.yaml
app/ui/app/: index.html  package.json
app/ui/app/src/: main.tsx  types.ts
app/ui/app/src/helpers/: ortholog-pair.helpers.ts
apps/: docker-compose.yml
apps/api/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
apps/api/app/: crud.py  database.py  main.py  models.py  nodeattrs.json  nxGraphtest.py  response.json  result.json  schemas.py
apps/fastapi-demo/: .gitignore  Dockerfile  README.md
apps/fastapi-demo/app/: crud.py  database.py  main.py  models.py  schemas.py
apps/sigmajs-demo/: package.json  vite.config.ts
apps/sigmajs-demo/src/: App.tsx  constants.ts  env.d.ts
apps/sigmajs-demo/src/components/GexfGraphLoader/: index.tsx
apps/sigmajs-demo/src/components/OrthologyGraphLoader/: OrthologyGraphLoader.tsx
apps/ui/: Dockerfile  package.json  vite.config.ts
apps/ui/src/: constants.ts  main.tsx  organisms.ts  types.ts
apps/ui/src/components/Analysis/: Analysis.helpers.tsx  Analysis.tsx  index.tsx
apps/ui/src/components/DragNDrop/: index.tsx
apps/ui/src/components/FilterControls/: FilterControls.tsx  index.tsx
apps/ui/src/components/FilterScore/: FilterScore.tsx  index.tsx
apps/ui/src/components/GeneHoverEvent/: GeneHoverEvent.tsx
apps/ui/src/components/GeneInfoDisplay/: GeneInfoDisplay.tsx  index.tsx
apps/ui/src/components/GeneInfoDisplayTrigger/: GeneInfoDisplayTrigger.tsx  index.tsx
apps/ui/src/components/GeneLink/: GeneLink.tsx  index.tsx
apps/ui/src/components/GeneNetwork/: GeneNetwork.tsx
apps/ui/src/components/GeneResults/: GeneResults.tsx
apps/ui/src/components/GeneSearch/: GeneSearch.tsx
apps/ui/src/components/GraphReducers/: GraphReducers.tsx
apps/ui/src/components/OrganismKey/: OrganismKey.tsx  index.tsx
apps/ui/src/components/OrthologyGraphLoader/: OrthologyGraphLoader.helpers.ts  OrthologyGraphLoader.tsx
apps/ui/src/helpers/: ortholog-pair.helpers.ts  set-operations.helpers.ts
apps/ui/src/pages/: error.tsx  index.tsx  layout.tsx
data/: .gitignore  README.md  dbBuilder.py  erd.md
dataparser/: .gitignore  README.md  Species.tsv  dbBuilder.py  pyproject.toml
docs/: GNA_duckdbBuilder.py  GeneNeighborhoodAPI.ipynb  GeneNeighborhoodAPIExtensions.md  draft_report.md  final_report.md  proposal.md  teamcontract.docx  video_presentation.md
graphs/: 2911.gexf
(+20 files in other folders)
