[tool.poetry]
name = "api"
version = "0.1.0"
description = "FastAPI for Gene Network Exploration"
authors = ["greenmmq <mark@greenpnw.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
duckdb = "^0.7.1"
duckdb-engine = "^0.7.0"
SQLAlchemy = "^2.0.9"
networkx = "^3.1"
linkcom = {git = "https://github.com/Nathaniel-Rodriguez/linkcom.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
